# maps4fs

./: .coveragerc  .dockerignore  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile_lite  LICENSE.md  README-steam.md  README.md  README_giants_editor.md  README_i3d.md  README_satellite_images.md  REFACTOR_PLAN.md  REFACTOR_PROMPT.md  REFACTOR_SUGGESTIONS.md  SECURITY.md  bot_requirements.txt  build.sh  codecov.yml  config.ini  create_venv.sh  demo.py  demo_osm.py  docker-compose.yml  index.html  loc.json  pyproject.toml  release.py  requirements.txt  run.ps1  run.sh  setup-wizard.ps1  textures.json
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: maps4fs-issue-template.md
.github/workflows/: api_release.yml  build.yml  build_bot.yml  build_docker.yml  build_docker_full.yml  build_docker_image.yml  build_docker_lite.yml  build_webui.yml  checks.yml  checks_pr.yml  issues.yml  loc_badge.yml  pypi.yml  ui_release.yml  update_readme.yml
.streamlit/: config.toml
bot/: bot.py  bot_templates.py
data/: fs22-texture-schema.json  fs25-grle-schema.json  fs25-texture-schema.json  fs25-tree-schema.json
dev/: clean_trash.ps1  clean_trash.sh  create_venv.ps1  download_data.ps1  generate_extents.py  prepare_environment.ps1  pydoc.sh  requirements.txt
docker/: Dockerfile  Dockerfile_bot  Dockerfile_webui  requirements_bot.txt  requirements_dev.txt  requirements_webui.txt
docs/: 001_whatismaps4fs.md  002_stepbystep.md  003_howtolaunch.md  008_customosm.md  009_workflow.md  010_mainsettings.md  012_textureschema.md  013_generationinfo.md  016_fields.md  020_map_structure.md  022_gethelp.md  FAQ.md  FAQ_docker.md  README.md  SUMMARY.md  atlas_about.md  atlas_license.md  atlas_submit.md  atlas_terms.md  background_terrain.md  buildings_schema.md  create_background_terrain.md  create_water_planes.md  custom_dem.md  custom_osm.md  data_directory.md  dds_conversion.md  dem.md  download_satellite_images.md  dtm_providers.md  electricity.md  farmlands.md  fields.md  fs_atlas_about.md  fs_atlas_submit.md  generation_info.md  generation_settings.md  get_help.md  grle_schema.md  how_maps4fs_works.md  (+44 more)
maps4fs/: __init__.py  bot.py  generate.py  globals.py  logger.py  main.py  ui.py
maps4fs/generator/: README.md  __init__.py  background.py  bootstrap.py  component.py  config.py  constants.py  context.py  dem.py  dtm.py  game.py  geo.py  grle.py  i3d.py  map.py  monitor.py  osm.py  path_steps.py  qgis.py  satellite.py  settings.py  statistics.py  texture.py  tile.py  utils.py
maps4fs/toolbox/: README.md  background.py  custom_osm.py  dem.py
scripts/: converters.py
src/: bot.py  bot_templates.py  generate.py  globals.py  logger.py  main.py  maps.py  weights.py
src/generator/: components.py
tests/: __init__.py  test_generator.py  tests.py
tutorials/: FAQ.md  README_giants_editor.md  README_i3d.md  README_satellite_images.md
webui/: config.py  dem.py  generator.py  history.py  main.py  osmp.py  queuing.py  templates.py  toolbox.py  videos.json  webui.py
webui/generator/: advanced_settings.py  base_component.py  expert_settings.py  generator.py  main_settings.py
webui/tools/: background.py  custom_osm.py  dem.py  section.py  textures.py  textures_data.py  tool.py  trees.py  trees_data.py
(+70 files in other folders)
