[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maps4fs"
version = "1.0.0"
description = "Generate map templates for Farming Simulator from real places."
authors = [{name = "iwatkot", email = "iwatkot@gmail.com"}]
license = {text = "Apache License 2.0"}
readme = "README.md"
keywords = ["farmingsimulator", "fs", "farmingsimulator22", "farmingsimulator25", "fs22", "fs25"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "opencv-python",
    "osmnx>=2.0.0",
    "rasterio",
    "geopy",
    "trimesh",
    "imageio",
    "tifffile",
    "pympler",
    "pydantic",
    "pygmdl",
    "owslib",
    "tqdm",
    "scipy",
    "pydtmdl",
]

[project.urls]
Homepage = "https://github.com/iwatkot/maps4fs"
Repository = "https://github.com/iwatkot/maps4fs"

[tool.setuptools.packages.find]
where = ["."]
include = ["maps4fs*"]
exclude = ["dev*", "bot*", "*data", "*docker", "*webui", "*docs"]
