[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maps4fs"
version = "1.0.0"
description = "Generate map templates for Farming Simulator from real places."
authors = [{name = "iwatkot", email = "iwatkot@gmail.com"}]
readme = "README.md"
license = "CC-BY-NC-4.0"
keywords = ["farmingsimulator", "fs", "farmingsimulator22", "farmingsimulator25", "fs22", "fs25"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "opencv-python",
    "osmnx>=2.0.0",
    "rasterio",
    "geopy",
    "trimesh<=4.8.2",
    "pydantic",
    "pygmdl",
    "owslib",
    "tqdm",
    "scipy",
    "pydtmdl",
    "manifold3d",
    "fast-simplification",
]

[project.urls]
Homepage = "https://github.com/iwatkot/maps4fs"
Repository = "https://github.com/iwatkot/maps4fs"

[tool.setuptools.packages.find]
where = ["."]
include = ["maps4fs*"]
exclude = ["dev*", "bot*", "*data", "*docker", "*webui", "*docs"]
